# component-iceberg

./: .gitignore  README.md
.github/workflows/: common-component-workflow.yml  ex-iceberg.yml  wr-iceberg.yml
components/common/: configuration.py  flake8.cfg  pyproject.toml
components/common/scripts/: build_n_test.sh
components/common/scripts/developer_portal/: fn_actions_md_update.sh  update_properties.sh
components/ex-iceberg/: Dockerfile  README.md  docker-compose.yml
components/ex-iceberg/component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
components/ex-iceberg/src/: component.py  configuration.py
components/ex-iceberg/tests/: test_component.py
components/wr-iceberg/: Dockerfile  README.md  docker-compose.yml
components/wr-iceberg/component_config/: component_long_description.md  configRowSchema.json  configSchema.json
components/wr-iceberg/src/: component.py  configuration.py  storage_api_client.py
